[package]
name = "mirai"
version = "0.1.0"
description = "Modular DAO Finance Terminal - V1 with Streaming Payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mirai"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1" 